--- a/package.json
+++ b/package.json
@@ -1,20 +1,6 @@
 {
-  "name": "web3-todo",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
   "dependencies": {
-    "next": "12.2.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
-  },
-  "devDependencies": {
-    "eslint": "8.20.0",
-    "eslint-config-next": "12.2.3"
+    "ethers": "^5.6.9",
+    "react-icons": "^4.4.0"
   }
 }
